v_7_10
- Fix average calculations

v_3_03
- Added capabilities for using phase modulator
-- v2
-- fix comport selection (still manual for debugging)