@@ -2,7 +2,7 @@ from alive_progress import alive_bar
 from math import floor
 
 #   Searches for ITU Channel nearest to the desired frequency and calculates the necessary offset
-#   Compares diffrence with previous channel and current channel; Since ch_list is sorted, if difference increases prev channel is the closest channel
+#   Compares diffrence with previous channel and current channel in the list of channels; Since ch_list is sorted, if difference increases prev channel is the closest channel
 def freq_search(f,ch_list_m):
     #initialize
     diff_prev = f-ch_list_m[0]
@@ -55,6 +55,33 @@ def settings_list_gen(wlstart_nm:float,wlend_nm:float,wldelta_pm:float):
     i = 0
     for f in flist_m:
         settings = freq_search(f,ch_list_m)
+        settings_list.append(settings)
+
+        ftest = settings[2]+settings[1]
+        # print(f,ftest,"Correct" if ftest == f else "Wrong"," Error vs wllist in nm: ",wllist_nm[i]-(c/(f*1e6))*1e9,settings)
+        i=i+1
+    
+    # print(settings_list)
+
+    return settings_list
+
+def coarse_settings_list_gen(ch_start:int,ch_end:int):
+    ch_list_rev = [191500000, 191550000, 191600000, 191650000, 191700000, 191750000, 191800000, 191850000, 191900000, 191950000, 192000000, 192050000, 192100000, 192150000, 192200000, 192250000, 192300000, 192350000, 192400000, 192450000, 192500000, 192550000, 192600000, 192650000, 192700000, 192750000, 192800000, 192850000, 192900000, 192950000, 193000000, 193050000, 193100000, 193150000, 193200000, 193250000, 193300000, 193350000, 193400000, 193450000, 193500000, 193550000, 193600000, 193650000, 193700000, 193750000, 193800000, 193850000, 193900000, 193950000, 194000000, 194050000, 194100000, 194150000, 194200000, 194250000, 194300000, 194350000, 194400000, 194450000, 194500000, 194550000, 194600000, 194650000, 194700000, 194750000, 194800000, 194850000, 194900000, 194950000, 195000000, 195050000, 195100000, 195150000, 195200000, 195250000, 195300000, 195350000, 195400000, 195450000, 195500000, 195550000, 195600000, 195650000, 195700000, 195750000, 195800000, 195850000, 195900000, 195950000, 196000000, 196050000, 196100000, 196150000, 196200000, 196250000] 
+    c=299792458
+
+    ch_sweep_list = []
+    x = ch_start
+    while x >= ch_end:
+        ch_sweep_list.append(x)
+        x = x-1
+
+    print(ch_sweep_list)
+    print("No. of Data Points",len(ch_sweep_list))
+
+    settings_list = []
+    i = 0
+    for c in ch_sweep_list:
+        settings = [c,0,ch_list_rev[c-1]]
         settings_list.append(settings)
 
         ftest = settings[2]+settings[1]
