@@ -5,3 +5,6 @@ v_3_03
 - Added capabilities for using phase modulator
 -- v2
 -- fix comport selection (still manual for debugging)
+
+v_4_02
+- added coarse mode for PMOD Laser
